--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,37 @@
 :root{
-    --header-sidebar-background: beige;
-    --body-background: rgba(155, 155, 155, 0.2);
-    --game-board-background: rgba(155, 155, 155, 0.2);
+    --header-sidebar-background: rgb(232, 192, 250, 0.7);
+    --body-background: white;
+    --game-board-background:black;
     --font-color: black;
     --game-board-border-color: black;
-    --square-background: rgb(255, 237, 221);
+    --square-background: white;
 }
 *{
     margin: 0;
     padding: 0;
     color: var(--font-color);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.header,
+.sidebar{
+    border-radius: 20px;
+    margin: 20px;
+    font-size: 20px;
 }
 .header{
     background-color: var(--header-sidebar-background);
     grid-area: header;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.new-game-button{
+    height: 50px;
+    width: 100px;
+    background-color: white;
 }
 .sidebar{
     grid-area: sidebar;
@@ -24,22 +42,56 @@
     grid-area: game-board;
     background-color: var(--game-board-background);
     display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
+    margin: 20px;
+    height: 70%;
+    width: 50%;
+    justify-self: center;
+    align-self: center;
+}
+.game-board-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 55px;
 }
 
+.sidebar-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+    padding: 20px;
+}
+.sidebar-list-item{
+    list-style: none;
+}
+#sidebar-list-title{
+    justify-self: center;
+    align-self: center;
+}
 body{
     height: 100vh;
     width: 100vw;
     background-color: var(--body-background);
     display: grid;
-    grid-template-rows: 0.3fr 2fr ;
+    grid-template-rows: 0.4fr 2fr ;
     grid-template-columns: 1fr 7fr;
     grid-template-areas:
-    "header header"
-    "sidebar game-board"
+    "sidebar header"
+    "sidebar game-board";
 }
 .game-board-item{
-    border-style:ridge;
+    border-style:solid;
+    border-width: 2px;
     border-color: var(--game-board-border-color);
     background-color: var(--square-background);
+}
+#credits{
+    justify-content: center;
+    align-items: center;
 }
